2003-07-02  Bastien Nocera  <hadess@hadess.net>

	* src/nautilus-application.c: (nautilus_application_instance_init),
	(check_mount_window_disabled): removed creation of new window
	when mounting CD-Roms, it was useless and very annoying

2003-06-29  Dave Camp  <dave@ximian.com>

	* src/nautilus-view-frame.c:
	(nautilus_view_frame_get_first_visible_file),
	(nautilus_view_frame_scroll_to_file): Pass envs to the CORBA
	calls.

2003-06-29  Dave Camp  <dave@ximian.com>

	* libnautilus-private/nautilus-icon-canvas-item.c:
	(real_map_pixbuf), (map_pixbuf): Try colorizing selected pixbufs
	with the selection color.

2003-06-29  Dafydd Harries  <daf@parnassus.ath.cx>

	* configure.in: Added cy (Welsh) to ALL_LINGUAS.

2003-06-28  Dave Camp  <dave@ximian.com>

	* src/nautilus-zoom-control.c
	(nautilus_zoom_control_button_press_event): Zoom to fit when the
	label is clicked.

2003-06-28  Dave Camp  <dave@ximian.com>

	* components/tree/nautilus-tree-view.c (add_one_volume_root): Return 
	a value.

=== nautilus 2.3.6 ===

2003-06-27  Dave Camp  <dave@ximian.com>

	* NEWS:
	* configure.in:
	Bumped to 2.3.6

2003-06-27  Alexander Larsson  <alexl@redhat.com>

	* components/tree/nautilus-tree-view.c: (create_tree):
	* libnautilus-private/nautilus-directory-async.c:
	(should_skip_file), (dequeue_pending_idle_callback),
	(remove_callback), (file_list_cancel), (count_non_skipped_files),
	(read_dot_hidden_file), (start_monitoring_file_list),
	(deep_count_one), (mime_list_one):
	* libnautilus-private/nautilus-directory-private.h:
	* libnautilus-private/nautilus-directory.c:
	(nautilus_directory_init), (nautilus_directory_finalize):
	* libnautilus-private/nautilus-file.c: (is_file_hidden),
	(nautilus_file_should_show):
	Implement .hidden files, synchronosly, for file:// only.
	
	* components/tree/nautilus-tree-view.c (create_tree):
	Change root name to "Filesystem"

2003-06-27  Dave Camp  <dave@ximian.com>

	* src/file-manager/fm-desktop-icon-view.c: (update_disks_menu):