@@ -1,7 +1,8 @@
 [Desktop Entry]
+Encoding=UTF-8
 _Name=Applications
 _Comment=Browse available software
 URL=applications:///
 Icon=gnome-logo-icon-transparent.png
-Terminal=0
+Terminal=false
 Type=Link
