@@ -1,7 +1,8 @@
 [Desktop Entry]
+Encoding=UTF-8
 Type=Link
 _Name=Favorites
 _Comment=Favorite applications
 URL=favorites:
 Icon=gnome-favorites.png
-Terminal=0
+Terminal=false
