@@ -1,7 +1,8 @@
 [Desktop Entry]
+Encoding=UTF-8
 Type=Link
 _Name=Desktop Preferences
 _Comment=Adjust your user environment
 URL=preferences:///
 Icon=gnome-desktop-config
-Terminal=0
+Terminal=false
