@@ -1,7 +1,8 @@
 [Desktop Entry]
+Encoding=UTF-8
 Type=Link
 _Name=Server Settings
 _Comment=Configure network services (web server, DNS server, etc.)
 URL=server-settings:
 Icon=gnome-server-config
-Terminal=0
+Terminal=false
