@@ -1,7 +1,8 @@
 [Desktop Entry]
+Encoding=UTF-8
 Type=Link
 _Name=Start Here
 _Comment=Start Here
 URL=start-here:
 Icon=gnome-starthere
-Terminal=0
+Terminal=false
