@@ -1,8 +1,9 @@
 [Desktop Entry]
+Encoding=UTF-8
 _Name=Start Here
 _Comment=Start Here
 Exec=nautilus start-here:
 Icon=gnome-starthere
 X-Nautilus-Icon=gnome-starthere
-Terminal=0
+Terminal=false
 Type=Application
