@@ -1,7 +1,8 @@
 [Desktop Entry]
+Encoding=UTF-8
 Type=Link
 _Name=System Settings
 _Comment=Change systemwide settings (affects all users)
 URL=system-settings:
 Icon=gnome-system-config
-Terminal=0
+Terminal=false
