@@ -1,15 +1,16 @@
 [Desktop Entry]
+Encoding=UTF-8
 _Name=Home Folder
 _Comment=View your home folder in the Nautilus file manager
 TryExec=nautilus
 Exec=nautilus
 Icon=gnome-home.png
-Terminal=0
+Terminal=false
 Type=Application
 Categories=Application;Core;
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=nautilus
-X-GNOME-Bugzilla-Component=
+X-GNOME-Bugzilla-Component=general
 X-Gnome-Bugzilla-OtherBinaries=nautilus-adapter;nautilus-content-loser;nautilus-sidebar-loser;nautilus-text-view;nautilus-throbber;
 
 
