@@ -1,3 +1,8 @@
+2003-07-02 Jordi Mallach  <jordi@sindominio.net>
+
+	* nautilus.desktop.in: Add Encoding and fixed Terminal entries.
+	* data/*.desktop.in: Likewise.
+
 2003-07-02  Bastien Nocera  <hadess@hadess.net>
 
 	* src/nautilus-application.c: (nautilus_application_instance_init),
